[FIX] customer single
