# storage/api-docs/api-docs.json
@@ -91,6 +91,45 @@
                     }
                 }
             }
+        },
+        "/api/v1/customer/{id}": {
+            "get": {
+                "tags": [
+                    "customers"
+                ],
+                "summary": "paginate customers",
+                "operationId": "6724f95b432b05c7d3052087be27ea2f",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Customer ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "example": 1
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK!",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "examples": {
+                                    "success": {
+                                        "summary": "pages of customer rows."
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "customer not found!."
+                    }
+                }
+            }
         }
     }
 }
